@@ -7,7 +7,7 @@ use strict;
 local $^W = 1;
 
 use Getopt::Std;
-use ExtUtils::ModuleMaker 0.32_06;
+use ExtUtils::ModuleMaker;
 use ExtUtils::ModuleMaker::Licenses::Standard;
 use ExtUtils::ModuleMaker::Licenses::Local;
 
@@ -225,7 +225,7 @@ getopts( "bdhCIPVcn:a:v:l:u:p:o:w:e:", \%opts );
 die Usage() if ( $opts{h} );
 
 my $where = 'Main Menu';
-my $MOD   = ExtUtils::ModuleMaker->new( {
+my $MOD   = ExtUtils::ModuleMaker->new(
     COMPACT        => ( ( $opts{c} ) ? 1 : 0 ),
     VERBOSE        => ( ( $opts{V} ) ? 1 : 0 ),
     CHANGES_IN_POD => ( ( $opts{C} ) ? 1 : 0 ),
@@ -242,7 +242,7 @@ my $MOD   = ExtUtils::ModuleMaker->new( {
     ( ( $opts{w} ) ? ( AUTHOR       => { WEBSITE      => $opts{w} } ) : () ),
     ( ( $opts{e} ) ? ( AUTHOR       => { EMAIL        => $opts{e} } ) : () ),
     USAGE_MESSAGE => Usage(),
-} );
+);
 
 if ( $MOD->{INTERACTIVE} ) {
     while () {
